--- a/docs/styles/_base.scss
+++ b/docs/styles/_base.scss
@@ -1,7 +1,250 @@
 @import "reset";
+@import "vars";
+@import "game";
+@import "modal";
+@import "button";
+@import "tooltip";
+
+#top {
+  position: relative;
+  width: 100%;
+  padding: 12px 24px;
+  background: black;
+  color: silver;
+  text-align: center;
+}
+
+.players {
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  .player {
+    display: flex;
+    align-items: center;
+    &.me {
+      font-weight: bold;
+    }
+    &:last-child {
+      flex-direction: row-reverse;
+    }
+    .piece, .text {
+      margin: 4px;
+    }
+    .piece {
+      width: 16px;
+      height: 16px;
+      transition: 0.25s;
+    }
+    .text {
+      line-height: 1;
+      .hash {
+        color: gray;
+      }
+    }
+  }
+}
+
+.versus {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  @extend .small-caps;
+}
+
+.whitespace {
+  flex: 1;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.overlay {
+  @include stretch;
+  position: absolute;
+  background: rgba(black, 0.75);
+}
+
+.users {
+  position: relative;
+  display: flex;
+  align-items: center;
+  > div {
+    display: flex;
+    margin: 0 4px;
+  }
+  .text {
+    @extend .small-caps;
+    em {
+      color: crimson;
+      font-style: normal;
+    }
+  }
+  .icon {
+    width: 24px;
+    height: 24px;
+    i {
+      position: absolute;
+      &.switch-enter-active, &.switch-leave-active {
+        transition: 0.2s;
+      }
+      &.switch-enter, &.switch-leave-active {
+        opacity: 0;
+        transform: translateY(8px);
+      }
+    }
+  }
+}
+
+.layer {
+  @include stretch;
+  position: absolute;
+  display: flex;
+  overflow: hidden;
+  color: white;
+  z-index: 3;
+  > .content {
+    margin: auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    > *:not(:last-child) {
+      margin-bottom: 8px;
+    }
+    .text {
+      .title {
+        @extend .small-caps;
+        display: flex;
+        align-items: center;
+        > * {
+          margin: auto 4px;
+        }
+      }
+    }
+  }
+  &.layer-enter-active, &.layer-leave-active {
+    &, > .overlay {
+      transition: 0.5s;
+    }
+    > .content {
+      transition: 0.25s;
+    }
+  }
+  &.layer-enter-active {
+    > .content {
+      transition-delay: 0.25s;
+    }
+  }
+  &.layer-leave-active {
+    > .content {
+      transition-delay: 0;
+    }
+  }
+  &.layer-enter, &.layer-leave-active {
+    > .overlay, > .content {
+      opacity: 0;
+    }
+    > .content {
+      transform: translateY(10%);
+    }
+  }
+}
+
+.layer.-loading {
+  .content {
+    margin: auto;
+    > * {
+      margin: 8px auto;
+    }
+    .loading {
+      position: relative;
+      display: flex;
+      align-items: center;
+      > div {
+        margin: 4px;
+      }
+      .icon {
+        display: flex;
+        i {
+          animation: rotate 1.5s linear infinite;
+          font-size: 24px;
+        }
+      }
+      .text {
+        @extend .small-caps;
+        display: block;
+        line-height: 1;
+      }
+    }
+  }
+  .users {
+    position: absolute;
+    margin: 8px 16px;
+    bottom: 0;
+    left: 0;
+  }
+  &.layer-enter-active, &.layer-leave-active {
+    &, .overlay {
+      transition: 0.75s;
+    }
+  }
+  &.layer-enter-active {
+    .content {
+      transition: 0.25s 0.5s;
+    }
+    .users {
+      transition: 0.25s 0.25s;
+    }
+  }
+  &.layer-leave-active {
+    .content, .users {
+      transition: 0.25s;
+    }
+  }
+  &.layer-enter, &.layer-leave-active {
+    .overlay {
+      opacity: 0;
+    }
+    .content {
+      opacity: 0;
+      transform: translateY(10%);
+    }
+    .users {
+      opacity: 0;
+      transform: translateX(-8px);
+    }
+  }
+}
 
 .small-caps {
-  font-size: 0.75rem;
+  font-size: 0.8rem;
   font-weight: bold;
-  color: gray;
+  text-transform: uppercase;
+}
+
+#wrap {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+  overflow: hidden;
+  background: white;
+}
+
+#buttons {
+  background: black;
+  width: 100%;
+  height: 48px;
+  padding: 0 4%;
+  &, .group {
+    display: flex;
+    justify-content: space-between;
+  }
 }
