--- a/docs/styles/_reset.scss
+++ b/docs/styles/_reset.scss
@@ -8,6 +8,20 @@ html, body, #wrap {
   height: 100%;
 }
 
+body {
+  background: whitesmoke;
+}
+
 body, button, input {
   font-family: Roboto, sans-serif;
+}
+
+button, input {
+  border: 0;
+  display: flex;
+  background: transparent;
+  padding: 12px 16px;
+  &:focus {
+    outline: 0;
+  }
 }
