--- a/docs/pages/index.pug
+++ b/docs/pages/index.pug
@@ -2,7 +2,7 @@ include _layout
 
 doctype
 html(lang="en-US")
-  +head(title)
+  +head("Connect Four")
     script#users-template(type="text/x-template")
       .users
         .icon
@@ -23,9 +23,11 @@ html(lang="en-US")
             i.material-icons highlight_off
         article.section.content
           .text(v-if="modal.text")
-            p {{ modal.text }}
-        footer.section.footer
-          section.buttons
+            p(v-html="modal.text")
+        footer.section.footer(v-if="modal.input || modal.buttons")
+          section.input(v-if="modal.input")
+            input(:placeholder="modal.input.placeholder" v-bind:maxlength="modal.input.maxlength" v-model="modal.input.value")
+          section.buttons(v-if="modal.buttons")
             button.-modal(v-for="button in modal.buttons" key="buttons" v-bind:class="{'-danger': button.flag === 'danger', '-emphasis': button.flag === 'emphasis'}" @click="close() && button.onclick && button.onclick()") {{ button.text }}
   +body
     header#top
@@ -33,7 +35,7 @@ html(lang="en-US")
         .player(v-for="(player, index) in players" v-bind:class="{'me': player.hash === hash}")
           div.piece(v-bind:class="{'-white': index === 0, '-black': index === 1, '-ghost': turn !== index && !ended, '-gray': ended && index !== winner}")
           div.text
-            span.name {{ player.name }}
+            span.name(@click="connected && requestUser(player.hash)") {{ player.name }}
             span.hash {{ "#" + player.hash }}
       .versus vs.
     .whitespace
