--- a/docs/styles/_reset.scss
+++ b/docs/styles/_reset.scss
@@ -20,8 +20,17 @@ button, input {
   border: 0;
   display: flex;
   background: transparent;
-  padding: 12px 16px;
   &:focus {
     outline: 0;
   }
+}
+
+button {
+  padding: 12px 16px;
+}
+
+input {
+  padding: 8px 12px;
+  font-family: 1rem;
+  border-radius: 0;
 }
